# DAE

./: .gitignore  CLAUDE.md  README.md  knn_main.py  main.py  pyproject.toml  requirements.txt  run_all.py  run_baseline.py  run_comparison.py  run_dae.py  run_knn.py  run_missforest.py
results/baselines/: mean_summary.json  median_summary.json  summary.json
results/baselines/metrics/: miss0.01_mean_metrics.json  miss0.01_median_metrics.json  miss0.01_zero_metrics.json  miss0.05_mean_metrics.json  miss0.05_median_metrics.json  miss0.05_zero_metrics.json  miss0.1_mean_metrics.json  miss0.1_median_metrics.json  miss0.1_zero_metrics.json
results/comparisons/: comparison_table.txt
results/dae/: summary.json
results/dae/metrics/: miss0.01_lr0.001_n1024_ep1000_loss.json  miss0.01_lr0.001_n1024_ep1000_metrics.json  miss0.01_lr0.001_n1024_ep100_loss.json  miss0.01_lr0.001_n1024_ep100_metrics.json  (+212 more)
results/knn/: summary.json
results/missforest/: summary.json
src/: __init__.py  compare_methods.py  config.py  data_preprocessing.py  evaluate.py  knn_evaluate.py  knn_visualize.py  model.py  train.py  visualize.py
src/baselines/: __init__.py  evaluate.py  experiments.py  plots.py  statistical_imputers.py  zero_imputer.py
src/common/: __init__.py  visualization.py
src/comparison/: __init__.py  plots.py
src/dae/: __init__.py  evaluate.py  experiments.py  measure_imputation_time.py  plots.py  train.py
src/knn/: __init__.py  evaluate.py  experiments.py  imputation.py  plots.py
src/missforest/: __init__.py  evaluate.py  experiments.py  imputation.py  plots.py
(+255 files in other folders)
