[tool.poetry]
name = "dae-pharmaceutical-imputation"
version = "1.0.0"
description = "Denoising Autoencoders (DAE) and MissForest for imputing missing values in pharmaceutical 3D printing formulation data"
authors = ["Olima Uddin", "Yusuf Ali Mohammed", "Simon Gaisford", "Moe Elbadawi"]
readme = "README.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = ">=2.0.0"
numpy = ">=1.24.0"
pandas = ">=2.0.0"
scikit-learn = ">=1.3.0"
matplotlib = ">=3.7.0"
seaborn = ">=0.12.0"
tqdm = ">=4.65.0"
missforest = ">=4.2.3"
lightgbm = ">=4.0.0"
joblib = ">=1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
black = ">=23.0.0"
flake8 = ">=6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
